--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR F19 50327672, 35089284, 22624052
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
